# ganim

./: .gitignore  meson.build
.cache/clangd/index/: gl.c.3FD55D7BD9223AB1.idx  gl.h.E5F7D55A6EE1075C.idx  khrplatform.h.E4C999B583AA6CBC.idx  main.cpp.C56EEC013B8C3968.idx
glad/include/glad/: gl.h
glad/src/: gl.c
src/: main.cpp
src/Math/: Bezier.hpp  Camera.cpp  Camera.hpp
src/Primitives/: Lines.cpp  Lines.hpp  Primitive.hpp  Triangle.cpp  Triangle.hpp
src/Render/: Shader.cpp  Shader.hpp
src/Types/: Angles.hpp  Color.hpp
src/Utils/: Preproc.hpp  logging.c  logging.h
